--- a/vignettes/summix.rmd
+++ b/vignettes/summix.rmd
@@ -112,6 +112,23 @@ summix( data = ancestryData,
       observed="gnomad_AF_afr" )
 ```
 
+## Example
+```{r}
+library("summix")
+# load the data
+data("ancestryData")
+ 
+# Estimate 5 reference ancestry proportion values for the gnomAD African/African Amercian ancestry group
+summix( data = ancestryData, 
+      reference=c("ref_AF_afr_1000G", 
+          "ref_AF_eur_1000G", 
+          "ref_AF_sas_1000G", 
+          "ref_AF_iam_1000G", 
+          "ref_AF_eas_1000G"), 
+      observed="gnomad_AF_afr",
+      pi.start = c(0.8, 0.1, 0.05, 0.02, 0.03))
+```
+
 # adjAF
 
 *Ancestry Adjusted Allele Frequency*
